--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <!-- Group for PDB ID input -->
         <div class="control-group">
             <label for="pdbIdInput">Enter PDB ID:</label>
-            <input type="text" id="pdbIdInput" placeholder="e.g., 1ubq">
+            <input type="text" id="pdbIdInput" placeholder="e.g., 3QRK">
             <button id="loadPdbIdButton">Load PDB ID</button>
         </div>
 
         <!-- Group for PubChem ID input -->
         <div class="control-group">
             <label for="pubchemIdInput">Enter PubChem ID:</label>
-            <input type="text" id="pubchemIdInput" placeholder="e.g., 2244">
+            <input type="text" id="pubchemIdInput" placeholder="e.g., 5291">
             <button id="loadPubchemIdButton">Load PubChem ID</button>
         </div>
 
