--- a/index.html
+++ b/index.html
@@ -10,27 +10,23 @@
         <div id="viewer"></div>
     </div>
     <div id="controls">
-        <!-- Group for local PDB file loading -->
         <div class="control-group">
             <input type="file" id="fileInput" accept=".pdb">
             <button id="loadFileButton">Load Local PDB File</button>
         </div>
 
-        <!-- Group for PDB ID input -->
         <div class="control-group">
             <label for="pdbIdInput">Enter PDB ID:</label>
             <input type="text" id="pdbIdInput" placeholder="e.g., 3QRK">
             <button id="loadPdbIdButton">Load PDB ID</button>
         </div>
 
-        <!-- Group for PubChem ID input -->
         <div class="control-group">
             <label for="pubchemIdInput">Enter PubChem ID:</label>
             <input type="text" id="pubchemIdInput" placeholder="e.g., 5291">
             <button id="loadPubchemIdButton">Load PubChem ID</button>
         </div>
 
-        <!-- Group for style selection and additional controls -->
         <div class="control-group">
             <label for="styleSelect">Select Style:</label>
             <select id="styleSelect">
@@ -38,8 +34,10 @@
                 <option value="stick">Stick</option>
                 <option value="sphere">Sphere</option>
             </select>
-            <button id="clearViewButton">Clear View</button>
+            <button id="animateProteinButton">Animate</button>
+            <button id="stopAnimationButton">Stop</button>
         </div>
+        
     </div>
 
     <script type="text/javascript" src="https://3dmol.csb.pitt.edu/build/3Dmol.js"></script>
