--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <option value="sphere">Sphere</option>
             </select>
             <div class="button-group">
-                <button id="animateProteinButton">Simulate</button>
-                <button id="stopAnimationButton">Stop</button>
+                <button id="simulateButton">Simulate</button>
+                <button id="stopButton">Stop</button>
             </div>
         </div>
         
