--- a/src2/index.html
+++ b/src2/index.html
@@ -210,9 +210,8 @@
                         <option value="line">Line</option>
                     </select>
                 </div>
-                <div class="button-group">
-                    <button class="button" id="startButton">Start</button>
-                    <button class="button secondary" id="stopButton">Stop</button>
+                <div class="form-control">
+                    <button class="button" id="toggleButton" data-state="start">Start</button>
                 </div>
             </div>
         </div>
