--- a/src2/index.html
+++ b/src2/index.html
@@ -166,12 +166,27 @@
             outline: none;
             border-color: #2563eb;
         }
+        
+        /* Score display */
+        #scoreDisplay {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background: rgba(0,0,0,0.7);
+            color: white;
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-family: 'Inter', sans-serif;
+            font-size: 13px;
+            display: none;
+        }
     </style>
 </head>
 <body>
     <div class="main-container">
         <div class="viewer-container">
             <div id="viewer"></div>
+            <div id="scoreDisplay"></div>
         </div>
         
         <div class="control-panel">
